[package]
name = "kits"
version = "0.0.0"
description = "A Tauri App"
authors = ["heliannuuthus"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }
[dependencies]
# tauri plugin

# structure
tauri = { version = "1", features = ["clipboard-all", "shell-open", "tracing"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.81"
thiserror = "1.0.58"
rand = "0.8.5"

# format
pkcs8 = { version = "0.10.2", features = ["alloc", "pem"] }
hex = "0.4.3"
base64ct = { version = "1.6.0", features = ["alloc", "std"] }
base16ct = { version = "0.2.0", features = ["alloc", "std"] }

# crypto
p256 = "0.13.2"
p384 = "0.13.0"
p521 = "0.13.3"
k256 = { version = "0.13.3" }
ed25519-dalek = { version = "2.1.1", features = ["pem", "pkcs8", "rand_core"] }
aes = { version = "0.8.4", features = ["hazmat", "zeroize"] }
sm4 = { version = "0.5.1", features = ["zeroize"] }
aes-gcm = { version = "0.10.3", features = ["zeroize", "aes", "std"] }
cbc = { version = "0.1.2", features = ["alloc"] }
rsa = { version = "0.9.6", features = ["std"] }
block-modes = "0.9.1"
block-padding = { version = "0.3.3" }
inout = { version = "0.1.3", features = ["block-padding", "std"] }
serde_bytes = "0.11.14"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
