[package]
name = "kits"
version = "0.0.0"
description = "A Tauri App"
authors = ["heliannuuthus"]
edition = "2021"

[profile.release]
debug = true

[build-dependencies]
tauri-build = { version = "1", features = [] }
[dependencies]

# structure
tauri = { version = "1", features = ["clipboard-all", "shell-open", "tracing"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = { version = "1.0.81", features = ["backtrace"] }

thiserror = "1.0.58"
rand = "0.8.5"
rand_core = "0.6.4"
serde_bytes = "0.11.14"
tracing = "0.1.40"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

# format
pkcs8 = { version = "0.10.2", features = ["alloc", "pem"] }
hex = "0.4.3"
base64ct = { version = "1.6.0", features = ["alloc", "std"] }
base16ct = { version = "0.2.0", features = ["alloc", "std"] }

# crypto

aes = { version = "0.8.4", features = ["hazmat", "zeroize"] }
sm4 = { version = "0.5.1", features = ["zeroize"] }
aes-gcm = { version = "0.10.3", features = ["zeroize", "aes", "std"] }
cbc = { version = "0.1.2", features = ["alloc"] }
rsa = { version = "0.9.6", features = ["std"] }
block-modes = "0.9.1"
block-padding = { version = "0.3.3" }
inout = { version = "0.1.3", features = ["block-padding", "std"] }
sha1 = "0.10.6"
sha2 = "0.10.8"
sha3 = "0.10.8"
digest = "0.10.7"
spki = { version = "0.7.3", features = ["alloc", "base64", "pem"] }
pkcs1 = { version = "0.7.5", features = [
  "alloc",
  "pem",
  "std",
  "zeroize",
  "pkcs8",
] }
# crypto -- elliptic-curve
elliptic-curve = { version = "0.13.8", features = [
  "pem",
  "pkcs8",
  "sec1",
  "digest",
  "alloc",
  "ecdh",
] }
p256 = { version = "0.13.2", features = ["pkcs8", "pem"] }
p384 = { version = "0.13.0", features = ["pkcs8", "pem"] }
p521 = { version = "0.13.3", features = ["pkcs8", "pem"] }
k256 = { version = "0.13.3", features = ["pkcs8", "pem"] }
curve25519-dalek = { version = "4.1.2", features = [
  "rand_core",
  "digest",
  "group",
  "ff",
] }
x25519-dalek = { version = "2.0.1", features = [
  "zeroize",
  "static_secrets",
  "serde",
] }
ed25519-dalek = { version = "2.1.1", features = [
  "pem",
  "pkcs8",
  "rand_core",
  "digest",
] }


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
