[package]
name = "kits"
version = "0.0.0"
description = "A Tauri App"
authors = ["heliannuuthus"]
edition = "2021"

[profile.release]
debug = true

[profile.dev]
opt-level = 2

[build-dependencies]
tauri-build = { version = "1", features = [] }
[dependencies]
#infrastructure
tauri = { version = "1", features = ["clipboard-all", "shell-open", "tracing"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11.14"
anyhow = { version = "1.0.81", features = ["backtrace"] }
thiserror = "1.0.58"

# logging
tracing = "0.1.40"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
tracing-test = "0.2.4"

# security
zeroize = "1.7.0"
rand = "0.8.5"
rand_core = "0.6.4"

# encoding
base16ct = { version = "0.2.0", features = ["alloc", "std"] }
base64ct = { version = "1.6.0", features = ["alloc", "std"] }
pkcs1 = { version = "0.7.5", features = [
  "alloc",
  "pem",
  "std",
  "zeroize",
  "pkcs8",
] }
sec1 = { version = "0.7.3", features = ["pem", "alloc", "pkcs8"] }
pkcs8 = { version = "0.10.2", features = ["alloc", "pem"] }
pem = "3.0.4"
der = { version = "0.7.9", features = ["alloc", "pem", "zeroize"] }

#crypto -- basic
block-modes = "0.9.1"
block-padding = "0.3.3"
inout = { version = "0.1.3", features = ["block-padding", "std"] }

# crypto -- kdf
pbkdf2 = { version = "0.12.2", features = ["sha2", "parallel"] }

# crypto -- digest
sha1 = "0.10.6"
sha2 = "0.10.8"
sha3 = "0.10.8"
digest = "0.10.7"

# crypto -- block-cipher
aes = { version = "0.8.4", features = ["hazmat", "zeroize"] }
sm4 = { version = "0.5.1", features = ["zeroize"] }
aes-gcm = { version = "0.10.3", features = ["zeroize", "aes", "std"] }
cbc = { version = "0.1.2", features = ["alloc"] }

# crypto -- rsa
rsa = { version = "0.9.6", features = ["std"] }

spki = { version = "0.7.3", features = ["alloc", "base64", "pem"] }
# crypto -- elliptic-curve
elliptic-curve = { version = "0.13.8", features = [
  "pem",
  "pkcs8",
  "sec1",
  "digest",
  "alloc",
  "ecdh",
] }
p256 = { version = "0.13.2", features = ["pkcs8", "pem"] }
p384 = { version = "0.13.0", features = ["pkcs8", "pem"] }
p521 = { version = "0.13.3", features = ["pkcs8", "pem"] }
k256 = { version = "0.13.3", features = ["pkcs8", "pem"] }
curve25519-dalek = { version = "4.1.2", features = [
  "rand_core",
  "digest",
  "group",
  "ff",
] }
x25519-dalek = { version = "2.0.1", features = [
  "zeroize",
  "static_secrets",
  "serde",
] }
ed25519-dalek = { version = "2.1.1", features = [
  "pem",
  "pkcs8",
  "rand_core",
  "digest",
] }


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
